trivia questions/answers show on page

--- a/index.html
+++ b/index.html
@@ -6,31 +6,26 @@
     <title>Question Game</title>
   </head>
   <body>
-
+  <div class = "container">
     <h1>Do you know your Movies?!!</h1>
-    <h3>From what movie did this quote come from?</h3>
+    <br>
+    <h4>From what movie did this quote come from?</h4>
+
+    <p id="displayQuote"></p>
+    <p id="movie"></p>
+    <p id="answer"></p>
     <p id="score"></p>
-    <p id="question"></p>
 
-    <button type="submit-button" class="btn btn-lg">Submit</button>
-
-    <div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <div class="input-group-text">
-          <input type="checkbox" aria-label="Checkbox for following text input">
-        </div>
-      </div>
-      <input type="text" class="form-control" aria-label="Text input with checkbox">
-    </div>
-
-    <div class="input-group">
+    <!-- <div class="input-group">
       <div class="input-group-prepend">
         <span class="input-group-text">First and last name</span>
       </div>
       <input type="text" aria-label="First name" class="form-control">
     </div>
+    <br>
+    <button type="submit-button" class="btn btn-dark btn-md"><strong>Submit</strong></button> -->
 
     <script src="script.js"></script>
-    
+  </div>  
   </body>
 </html>
