correct answers and score shows on page

--- a/index.html
+++ b/index.html
@@ -10,20 +10,14 @@
     <h1>Do you know your Movies?!!</h1>
     <br>
     <h4>From what movie did this quote come from?</h4>
-
-    <p id="displayQuote"></p>
+    <br>    <p id="displayQuote"></p>
+    <button id="startGame" onClick="startGame()">Click To Play!</button>
     <p id="movie"></p>
     <p id="answer"></p>
     <p id="score"></p>
+    
 
-    <!-- <div class="input-group">
-      <div class="input-group-prepend">
-        <span class="input-group-text">First and last name</span>
-      </div>
-      <input type="text" aria-label="First name" class="form-control">
-    </div>
-    <br>
-    <button type="submit-button" class="btn btn-dark btn-md"><strong>Submit</strong></button> -->
+    <!-- <button class="userChoice" value="princess">princess</button> -->
 
     <script src="script.js"></script>
   </div>  
