--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Question Game</title>
   </head>
   <body>
@@ -15,9 +16,9 @@
     <p id="movie"></p>
     <p id="answer"></p>
     <p id="score"></p>
-    
-
-    <!-- <button class="userChoice" value="princess">princess</button> -->
+    <div id="scoreboard"></div>
+    <input type="textInitials" id="initials" onfocus="this.value=''" value="Enter your initials here!">
+    <button id="submit">Submit</button> 
 
     <script src="script.js"></script>
   </div>  
