--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   <div class = "container">
+
     <h1>Do you know your Movies?!!</h1>
     <br>
     <h4>From what movie did this quote come from?</h4>
@@ -22,5 +23,10 @@
 
     <script src="script.js"></script>
   </div>  
+
+  <style>
+    body {background-size: cover;
+      background-image: url(https://images.all-free-download.com/images/graphicthumb/halation_movies_film_art_background_vector_581757.jpg)
+    </style> 
   </body>
 </html>
