High score board shows

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <p id="movie"></p>
     <p id="answer"></p>
     <p id="score"></p>
-    <div id="scoreboard"></div>
+    
     <input type="textInitials" id="initials" onfocus="this.value=''" value="Enter your initials here!">
-    <button id="submit">Submit</button> 
+    <button id="submit" onclick="addUser()">Submit</button>
+    <div id="highscore"><strong></strong></div>
+    <div id="scoreboard"></div>
+
 
     <script src="script.js"></script>
   </div>  
